[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/ToolIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Events/PressureGauge.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.234723

[node name="PressureGauge" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ToolIcon" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )

[connection signal="mouse_entered" from="." to="." method="_on_TempGauge_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TempGauge_mouse_exited"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
